src/test/resources/valid/ValidPackage.sc
/* (c) https://github.com/MontiCore/monticore */
package valid;

statechart ValidPackage {
  initial state A;
}