src/test/resources/invalid/TwoInitialStates.sc
/* (c) https://github.com/MontiCore/monticore */

statechart TwoInitialStates {
  initial state EngineOff;
  initial state EngineRunning;
}